Adding a Custom Value Resolver for AutoMapper

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=ECommerce.db"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiUrl": "https://localhost:5001/Content/"
 }
