Passing down data to child components

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=ECommerce.db"
   },
-  "ApiUrl": "https://localhost:5001/Content/"
+  "ApiUrl": "http://localhost:4200/assets/Content/"
 }
