--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,5 +10,5 @@
     "DefaultConnection": "Data source=ECommerce.db"
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://localhost:5001/Content/"
+  "ApiUrl": "http://localhost:4200/assets/Content/"
 }
